# vae_demo

./: README.md  pyproject.toml
results/basic_run/: config.json  decoder_state_dict.pt  encoder_state_dict.pt
results/sigma_series/: config_{i}.json  decoder_state_dict_{i}.pt  encoder_state_dict_{i}.pt
scripts/: basic_run.py  sigma_mismatch_study.py  sigma_series.py
vae_demo/: config.py  model.py  spiral.py
